# EDF-Tempo-E-Ink-Display

./: .gitignore  README.md  init-dependencies.sh  platformio.ini
eTempo/: eTempo.ino
eTempo/my_nlohmann/: README.txt  json.hpp
eTempo/src/: ApiCouleurTempoColorService.cpp  ApiCouleurTempoColorService.h  ArduinoHttpClient.cpp  ArduinoHttpClient.h  BaseTempoColorService.cpp  BaseTempoColorService.h  BatteryMonitor.h  CommerceEdfColorService.cpp  CommerceEdfColorService.h  Configuration.h  HttpClientFactory.cpp  HttpClientFactory.h  IHttpClient.h  ITempoColorService.h  Platform.h  RteTempoColorService.cpp  RteTempoColorService.h  SimpleStorage.h  TempoApp.cpp  TempoApp.h  TempoColor.h  TempoColorServiceManager.cpp  TempoColorServiceManager.h  TempoLightColorService.cpp  TempoLightColorService.h  library.json
src/: main.cpp
tests/: CMakeLists.txt  README.md
tests/app/: CurlHttpClient.cpp  CurlHttpClient.h  StubTempoColorService.cpp  StubTempoColorService.h  main.cpp
